--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main id="container">
         <section id="video">
 
-          <iframe height="450" src="https://www.youtube.com/embed/zUwEIt9ez7M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe height="360px" src="https://www.youtube.com/embed/zUwEIt9ez7M" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <div class= "text-info">  
             <h2>Deep Purple - Smoke on the Water</h2>
             <div class="views-likes">
